        manual section 1.
  * Fixed:
    - updated the USAGE section of multiple scripts to follow the syntax
      that is properly handled by the 'help2man' script;
    - codcif:
      - detecting and reporting forbidden vertical tabulation (VT) and
        form feed (FF) control characters;
      - reporting CIF data names consisting of a single underscore;
      - optimized detection and reporting of control characters.
    - cif_fix_values:
      - updated several warning messages to not capitalise the word
        "Kelvin" where it refers to the units of measurement.
    - cif2cod:
      - updated the handling of the --exclude-keywords-with-undefined-values
        option so it no longer triggers an opposite effect than expected. 
    - cif2rdf:
      - updated the handling of the --reformat-space-group,
        --dont-reformat-space-group, --leave-space-group options
        so they are no longer ignored. 
    - COD::SUsage:
      - updated the options() and usage() subroutines to properly
        use the script name that is passed as an argument instead
        of relying on the value of the '$0' Perl variable.
    - help2man:
      - updated the program name resolving logic to properly handle
        program calls with multiple input files.

cod-tools (2.6)

  * Added:
    - cif_molecule:
      - polymer basis string was added to the output (respective tag
        '_cod_molecule_polymer_basis');
      - the --special-disorder-operator-set, --random-seed options and
        --vdw-distance-factor options.
    - COD::Algebra::GaussJordan:
      - the module itself;
      - 'backward_elimination()' for polymer basis string calculation.
    - COD::AtomNeighbours:
      - the get_max_vdw_radius() subroutine.
  * Changed:
    - cif_molecule:
      - updated the polymer handling logic to always explicitly mark
        molecule as non-polymeric when the molecule is not a polymer
        ('_cod_molecule_is_polymer' data item is set to 'no');