@@ -1,0 +1,5 @@
+./cifparse: tests/cifparse_148.inp(2,11) data_test: ERROR, incorrect CIF syntax:
+ data_test _tag
+           ^
+./cifparse: tests/cifparse_148.inp: compiler could not recover from errors, quitting now -- 1 error(s) detected
+./cifparse: file 'tests/cifparse_148.inp' FAILED
