@@ -40,6 +40,7 @@ cod-tools (unreleased)
       - detecting and reporting forbidden vertical tabulation (VT) and
         form feed (FF) control characters;
       - reporting CIF data names consisting of a single underscore;
+      - terminating otherwise endless cycle in CIF2 lexer;
       - optimized detection and reporting of control characters.
     - cif_fix_values:
       - updated several warning messages to not capitalise the word
